gccida/g0/get_attr_prefix_0f
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20287:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20287:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20289:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20289:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20291:4: error: expected ';' after expression
rtx v9; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20291:5: error: use of undeclared identifier 'v9'
rtx v9; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20309:60: error: expected expression
if ( **( _WORD **)&insn[2] != 40 && asm_noperands( *( rtx *)&insn[2]) < 0 ) 
                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20310:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20310:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20393:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !aligned_operand( recog_data_0.operand[1], HImode)) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20412:37: error: use of undeclared identifier 'recog_data_0'
result = !q_regs_operand( ( __int64)recog_data_0.operand[0], 2) || ( ( x86_movx >> ix86_cpu) & 1) != 0; 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20488:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20489:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20491:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20503:1: error: use of undeclared identifier 'v5'
v5 = *( _WORD *)recog_data_0.operand[0] == 67 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20503:17: error: use of undeclared identifier 'recog_data_0'
v5 = *( _WORD *)recog_data_0.operand[0] == 67 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20504:9: error: expected ':'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^
        : 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20504:1: note: to match this '?'
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20504:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
? ( rtx)recog_data_0.operand[0]->fld[0].rtwint 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/insn-attrtab.c:20506:30: error: use of undeclared identifier 'v5'
v6 = insn_addresses_->data.i[v5->fld[0].rtint]; 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/get_attr_prefix_0f/src/obj/insn-attrtab.o] Error 1
